# agile-api

./: .gitignore  README.md
agile-api/: pyproject.toml
agile-api/agile_api/: agile-project.db  crud.py  database.py  main.py  models.py  schemas.py  seed.py  test_main.py
agile-api/tests/: test_agile_api.py
