[tool.poetry]
name = "agile-api"
version = "0.1.0"
description = ""
authors = ["Joshua John Jay"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.18"
fastapi = "^0.61.0"
requests = "^2.24.0"
black = "^19.10b0"
mypy = "^0.782"
uvicorn = "^0.11.8"
passlib = "^1.7.2"
python-multipart = "^0.0.5"
jose = "^1.0.0"
bcrypt = "^3.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
